force-app/main/default/objects/geopointe__GP_Calendar_Object_Location__c/geopointe__GP_Calendar_Object_Location__c.object-meta.xml
<CustomObject>
    <description>Association of Geopointe Calendar Object to a Map Object so that we can locate the calendar items.</description>
    <label>Geopointe Calendar Object Location</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Calendar Object Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>