force-app/main/default/objects/geopointe__GP_Calendar_Object_Location__c/fields/geopointe__Geopointe_Calendar_Object__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geopointe_Calendar_Object__c</fullName>
    <label>Geopointe Calendar Object</label>
    <referenceTo>geopointe__GP_Calendar_Object__c</referenceTo>
    <relationshipLabel>Geopointe Calendar Object Locations</relationshipLabel>
    <relationshipName>Geopointe_Calendar_Object_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>