force-app/main/default/objects/geopointe__GP_Calendar_Object_Location__c/fields/geopointe__Map_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Object_Name__c</fullName>
    <description>The Geopointe Map object to use for mapping the calendar items.</description>
    <label>Map Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>