force-app/main/default/objects/geopointe__GP_Calendar_Object_Location__c/fields/geopointe__Precedence__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Precedence__c</fullName>
    <inlineHelpText>Order of precendence to determine location</inlineHelpText>
    <label>Precedence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>