force-app/main/default/objects/geopointe__GP_Calendar_Object_Location__c/fields/geopointe__Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Relationship_Field__c</fullName>
    <description>Defines the field used to link a Calendar Item to an Object. The lookup field must point to an object that is also configured as a Geopointe Map Object.</description>
    <label>Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>