force-app/main/default/objects/geopointe__GP_Calendar_Object_Location__c/fields/geopointe__Relationship_SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Relationship_SObject_Name__c</fullName>
    <label>Relationship SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>